--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gymnasium</title>
+    <title>E-Commerce</title>
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/venobox.min.css">
@@ -28,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mx-auto  mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -42,15 +42,16 @@
                         <a class="nav-link" href="#">Menu</a>
                     </li>
                     <li class="nav-item">
-                    git     <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
 
                 </ul>
 
                 <div class="nav-right text-white">
                     <p>call now!<i class="fa fa-phone-alt"></i>01643897838</p>
-                    <p>Reverse a table</p>
+                    <p class="nav-right-text">Reverse a table</p>
                 </div>
+
             </div>
         </div>
     </nav>
@@ -70,7 +71,7 @@
                 <div class="row">
                     <div class="col-lg-6 text-left text-white">
                         <div class="banner-text">
-                            <h2>Etery cafe and restaurant</h2>
+                            <h2>Eatery cafe and restaurant</h2>
                             <h1>our mission is to provide an unforgettable experience</h1>
                             <a href="#">Meet our Cheef</a>
                         </div>
